correction iphone Xs Max

--- a/style/style.css
+++ b/style/style.css
@@ -140,8 +140,8 @@ article {
 }
 
 
-/* iPhone XS Max, 11 Pro Max en portrait */
-@media only screen and (min-width: 414px) and (max-width: 767px) and (orientation: portrait) {
+/* petit écran et iPhone XS Max, 11 Pro Max en portrait */
+@media only screen and (min-width: 414px) and (max-width: 896px) and (orientation: portrait) {
     body {
         background: #FFF;                                 /*couleur fond de la page */
         font-family: 'OpenSans', 'Arial', sans-serif;
@@ -167,7 +167,6 @@ article {
     .colonne-gauche {
         background-color: #5F80ED;
 
-
         display: flex;
         flex-direction: column;
     }
@@ -181,44 +180,3 @@ article {
         width: 10%;
     }
 }
-
-/* iPhone XS Max, 11 Pro Max en paysage */
-/*@media only screen and (min-width: 896px) and (max-width: 950px) and (orientation: landscape) {
-    body {
-        background: #FFF;                                 
-        font-family: 'OpenSans', 'Arial', sans-serif;
-        min-height: 100vh;                                  
-        min-width: 140vw;
-        max-width: 200vw;
-        margin: auto;                                     
-        background-color: rgb(218, 218, 218);
-    }
-    article {
-        display: flex;
-        flex-direction: column;
-        border: 0.2rem solid #5F80ED;
-    }
-    .colonne-droite {
-        background-color: white;
-        padding: 1rem 2rem;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    .colonne-gauche {
-        background-color: #5F80ED;
-
-        display: flex;
-        flex-direction: column;
-    }
-    .colonne-gauche #photoAside img {
-        display: block;
-        margin: auto;
-        width: 20%;
-        border-radius: 50%;
-    }
-    .colonne-gauche #logos img{
-        width: 10%;
-    }
-}*/
